# rust-todo-list

./: Cargo.toml  docker-compose.yml
config/: local.toml
migrations/: 1__user_table.sql  3__list_table.sql  4__item_table.sql
src/: controller.rs  db.rs  main.rs  model.rs  service.rs  settings.rs
src/controller/: item.rs  list.rs  user.rs
src/model/: item.rs  list.rs  user.rs
src/service/: item.rs  list.rs  user.rs
swagger-ui/: swagger.yml
