[package]
name = "todo_list"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
config = "0.15.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio"]}
log = "0.4.26"
simple_logger = "5.0.0"